<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameOver">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#f14444" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch_ad"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch_ad_button"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:onClick="watchAd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_thanks"
        android:id="@+id/textView4"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:onClick="startAgain" />
</RelativeLayout>
