<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TheEnd">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:src="@drawable/pokeball_by_erykszlachetka"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_end"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:textSize="42sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coming_soon"
        android:id="@+id/textView6"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ff0000"
        android:layout_below="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_over"
        android:id="@+id/start_over_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:onClick="goBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="You have finished Pokemon Go-Quiz Generation 1"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />
</RelativeLayout>
