<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backgroundView"
        android:src="@drawable/bg"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="181dp"
        android:layout_height="145dp"
        android:id="@+id/pokeBallView"
        android:src="@drawable/pokeball_by_erykszlachetka"
        android:layout_gravity="center"
        android:alpha="0"
        android:layout_below="@+id/backgroundView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#ff0000"
        android:layout_below="@+id/pokeBallView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:id="@+id/adView">
    </com.google.android.gms.ads.AdView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
